--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meu Projeto</title>
+    <title>Cartão de Visita - Mateus Medeiros</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/avatar.png"
-          alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo."
+          src="./assets/avatar1.png"
+          alt="Foto de Mateus, usando óculos e gorrinho na cabeça."
         />
-        <p>@maykbrito</p>
+        <p>@mateusmedeirosa</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -31,7 +31,7 @@
 
       <ul>
         <li>
-          <a href="#">Inscrever-se no NLW</a>
+          <a href="#">Quem sou</a>
         </li>
 
         <li>
@@ -49,11 +49,14 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/maykbrito" target="_blank">
+        <a href="https://github.com/mateusmedeirosa" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://instagram.com/maykbrito" target="_blank">
+        <a
+          href="https://instagram.com/mateusmedeirosa?igshid=OGQ5ZDc2ODk2ZA=="
+          target="_blank"
+        >
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
@@ -61,13 +64,14 @@
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
-        <a href="https://linkedin.com/in/maykbrito" target="_blank">
+        <a href="linkedin.com/in/mateus-medeiros-424a3823" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
 
       <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
+        Meu primeiro projeto, feito através do curso da
+        <a href="https://rocketseat.com.br/">Rocketseat</a>
       </footer>
     </div>
 
