--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
-        <a href="linkedin.com/in/mateus-medeiros-424a3823" target="_blank">
+        <a
+          href="https://linkedin.com/in/mateus-medeiros-424a3823"
+          target="_blank"
+        >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
